# Curiosity

./: .gitignore  build.gradle.kts  settings.gradle.kts
composeApp/: MediaDeviceSalts  build.gradle.kts
composeApp/cache/: LOG  LOG.old  LocalPrefs.json  SingletonCookie  SingletonLock  SingletonSocket  Visited Links  first_party_sets.db
composeApp/cache/GrShaderCache/: data_0  data_1  data_2  index
composeApp/cache/GraphiteDawnCache/: data_1  index
composeApp/cache/ShaderCache/: data_1  index
curiosity_crawler/: Cargo.toml
curiosity_crawler/src/: main.rs
curiosity_crawler/src/dto/: mod.rs  model_dto.rs  request_dto.rs  response_dto.rs
curiosity_crawler/src/models/: cc_index_info.rs  mod.rs  pages.rs  query_types.rs  section_weights.rs  source_domain.rs  term_weights.rs
curiosity_crawler/src/services/: results.rs
curiosity_crawler/src/utils/: agentic_crawl.rs  common_crawl.rs  crawl_orchestrator.rs  mod.rs  page_ranker.rs  page_scorer.rs  score_normalizer.rs  scraper.rs
curiosity_indexer/: Cargo.toml
curiosity_indexer/src/: main.rs
curiosity_indexer/src/dto/: crawler_dto.rs  mod.rs  model_dto.rs  status_types.rs  user_dto.rs
curiosity_indexer/src/services/: crawl_results.rs  index_results.rs  mod.rs
curiosity_indexer/src/utils/: crawler.rs  indexer_db.rs  mod.rs  query_processor.rs  vectorizer.rs
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist  SplashScreen.storyboard
iosApp/iosApp.xcodeproj/: project.pbxproj
server/: build.gradle.kts
shared/: build.gradle.kts
(+100 files in other folders)
