[package]
name = "curiosity_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
bm25 = "2.3.2"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "query", "stream"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stop-words = "0.9.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
