[package]
name = "curiosity_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
qdrant-client = "1.16.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
